# AutoDRP

./: .gitignore  CLAUDE.md  README.md  docker-compose.mcp.yml  langgraph.json  mcp-gateway.json  mcp.json  preprocess_deeptta.py  pyproject.toml  requirements_preprocessing.txt
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
del_not use/: default.conf
mcp-containers/: start-mcp.sh  stop-mcp.sh
scripts/: mcp-status.sh  start-mcp.sh  stop-mcp.sh
src/: __init__.py  agent.py  mcp.py  mcp_manager.py  prompts.py  state.py  utils.py
