[project]
name = "AutoDRP"
version = "0.0.1"
description = "AutoDRP - Automated Drug-Response Prediction Pipeline."
authors = [
    { name = "Lance Martin" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.24",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.4.8",
    "langgraph-swarm>=0.0.7",
    "pymupdf>=1.26.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["AutoDRP"]

[tool.setuptools.package-dir]
"AutoDRP" = "src"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
]
lint.ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E", "F"]